--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
   <body>
     <canvas id="myChart" width="400" height="400"></canvas>
   </body>
-  <!-- <script>
+  <script>
     var exports = {};
-  </script> -->
+  </script>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="./index.js" type="module"></script>
 </html>
